<resources>
    <string name="app_name">JJURIS AI2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="todo">TODO</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>

    <string name="sign_up">Sign up</string>
    <string name="create_account">Create account</string>
    <string name="enter_name">Enter name</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="history">History</string>


    <string name="welcome_to_juris_ai">WELCOME TO JURIS AI</string>
    <string name="nav_open">\n</string>
    <string name="nav_close" />
    <string name="selected_from_gallery">Selected from Gallery: %1$s</string>
    <string name="photo_captured_successfully">Photo captured successfully!</string>
    <string name="file_selected">File Selected: %1$s</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="juris_ai">JURIS AI</string>
    <string name="username">username</string>
    <string name="log_out">Log out</string>
    <string name="logout">Log out</string>
    <string name="abcd">ABCD</string>
    <string name="email_divyamali0404_gmail_com">Email:divyamali0404.gmail.com</string>
    <string name="search">Search.....</string>
    <string name="share_the_app">Share the App</string>
    <string name="hello">HELLO</string>
</resources>