<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigationview">



    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"
            android:iconTint="@color/lightblack"
            tools:targetApi="o" />


        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/profile"
            android:iconTint="@color/lightblack"
            tools:targetApi="o"
            />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings"
            android:iconTint="@color/lightblack"
            tools:targetApi="o"
            />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/baseline_share_24"
            android:title="@string/share_the_app"
            android:iconTint="@color/lightblack"
            tools:targetApi="o"
            />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/baseline_history_24"
            android:title="@string/history"
            android:iconTint="@color/lightblack"
            tools:targetApi="o"
            />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout"
            android:iconTint="@color/lightblack"
            tools:targetApi="o"
            />



    </group>

</menu>